[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Ramazan <syrlybai056@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
jinja2 = "^3.1.2"
uvicorn = "^0.22.0"
requests = "^2.31.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
